--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "mysql2": "^3.11.0",
     "typeorm": "^0.3.20"
   }
